--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
   <!-- about section -->
   <section class="about fz-en-m" id="about">
     <div class="container fz-jp">
-      <h2 class="about-ttl fz-30 fz-25-sp fz-en-m">
+      <h2 class="about-ttl fz-36 fz-30-sp fz-en-m">
         About
-        <span class="fz-18 fz-15-sp fz-jp-b">事業概要</span>
+        <span class="fz-20 fz-15-sp fz-jp">事業概要</span>
       </h2>
       <div class="about-list">
         <ul class="">
@@ -74,12 +74,12 @@
               <img src="./assets/img/speed.png" alt="速いの画像" />
             </div>
             <div class="about-list-ttl">
-              <h3 class="fz-jp fz-18 fz-15-sp">
+              <h3 class="fz-jp fz-20">
                 SPEED
-                <span class="fz-18 fz-13-sp fz-jp-b">速い</span>
+                <span class="fz-18 fz-16-sp fz-jp">速い</span>
               </h3>
             </div>
-            <div class="about-list-txt fz-jp-b">
+            <div class="about-list-txt fz-18 fz-16-sp fz-jp">
               <p>
                 実装スピードの速さに自信があります。どうしてスピードが速いかというと、在籍ITエンジニア数が多いためです。人海戦術でアサインを割り振り、ウェブサイトの新規構築やリニューアルはもちろん、テキスト修正や画像の差し替えなど細かな対応もすぐに対応が可能です。
               </p>
@@ -90,13 +90,13 @@
             <div class="about-img">
               <img src="./assets/img/flexible.png" alt="柔軟性の画像" />
             </div>
-            <div class="about-list-ttl fz-jp fz-18 fz-15-sp">
+            <div class="about-list-ttl fz-jp fz-20">
               <h3>
                 FLEXIBLE
-                <span class="fz-18 fz-13-sp fz-jp-b">柔軟性</span>
+                <span class="fz-18 fz-16-sp fz-jp">柔軟性</span>
               </h3>
             </div>
-            <div class="about-list-txt fz-jp-b">
+            <div class="about-list-txt fz-18 fz-16-sp fz-jp">
               <p>
                 1箇所だけのテキスト修正やちょっとした画像の修正など細かな対応でもお受けしております。弊社が作成したサイトでなくても構築されたコードを解析して修正対応が可能です。既存サイトの一部分だけ修正したい、ウェブサイトを作成した制作会社が連絡がつかなくなった、保守会社を切り替えたいなどのご要望にもお応えできます。
               </p>
@@ -107,13 +107,13 @@
             <div class="about-img">
               <img src="./assets/img/experience.png" alt="対応実績の画像" />
             </div>
-            <div class="about-list-ttl fz-jp fz-18 fz-15-sp">
+            <div class="about-list-ttl fz-jp fz-20">
               <h3>
                 EXPERIENCE
-                <span class="fz-18 fz-13-sp fz-jp-b">対応実績</span>
+                <span class="fz-18 fz-16-sp fz-jp">対応実績</span>
               </h3>
             </div>
-            <div class="about-list-txt fz-jp-b">
+            <div class="about-list-txt fz-18 fz-16-sp fz-jp">
               <p>
                 2016年から6年以上、ウェブ制作会社やデザイン会社の下請けとして数多の日本企業、サービスのサイトを構築してきました。契約上、実績公開できない物が多くありますが、行政、大学、大手自動車メーカー製品サイト、大手電機メーカー製品サイトなどいわゆる大手のウェブサイトも対応しているため技術力には自信があります。
               </p>
@@ -129,15 +129,15 @@
   <section id="service">
     <div class="container service-container">
       <div class="mt60 service-container">
-        <h2 class="fz-30 fz-25-sp fz-en-m mb20">Service</h2>
-        <span class="fz-18 fz-15-sp fz-jp">サービス</span>
+        <h2 class="fz-36 fz-30-sp fz-en-m mb20">Service</h2>
+        <span class="fz-20 fz-15-sp fz-jp">サービス</span>
       </div>
 
       <div class="mt95 service-container">
         <div class="service_details slide-up">
           <img src="./assets/img/seo.png" alt="ターゲットの画像" />
           <div>
-            <h3 class="pb30 fz-25 fz-18-sp fz-en-m">SEO / Marketing</h3>
+            <h3 class="pb30 fz-25 fz-en-m">SEO / Marketing</h3>
             <p class="fz-jp">
               SEOでターゲットにしたいキーワードの選定から記事作成、運用まで対応いたします。キーワードの選定では検索ボリューム（検索数）の調査や競合分析を行い、レポートで可視化して報告します。その上で、キーワードの選定や、選定したキーワードでの上位表示のための施策立案、実行をご提案します。
             </p>
@@ -148,7 +148,7 @@
         <div class="service_details slide-up">
           <img src="./assets/img/design.png" alt="ディザイーの画像" />
           <div>
-            <h3 class="pb30 fz-25 fz-18-sp fz-en-m">Design</h3>
+            <h3 class="pb30 fz-25 fz-en-m">Design</h3>
             <p class="fz-jp">
               ウェブサイトやバナーのデザインをします。新規サイトの作成やウェブサイトのリニューアルはもちろん、「既存サイトの一部だけデザインを変更する」やバナーの修正など小回りの効く対応が可能です。ウェブサイトのデザインと合わせたパンフレットや名刺、ノベルティの作成なども対応可能です。
             </p>
@@ -159,7 +159,7 @@
         <div class="service_details slide-up">
           <img src="./assets/img/coding.png" alt="コーディングの画像" />
           <div>
-            <h3 class="pb30 fz-25 fz-18-sp fz-en-m">Coding / Programming</h3>
+            <h3 class="pb30 fz-25 fz-en-m">Coding / Programming</h3>
             <p class="fz-jp">
               デザインデータの通りにウェブサイトを構築したり、アニメーションを実装したり、送信フォームやシステムの開発、条件分岐を用いた表示ロジックの調整など対応します。様々な画面サイズで表示が崩れないように調整するレスポンシブ対応が可能です。（PC、スマホ、タブレット対応）。
             </p>
@@ -170,7 +170,7 @@
         <div class="service_details slide-up">
           <img src="./assets/img/wordpress.png" alt="ワードプレスの画像" />
           <div>
-            <h3 class="pb30 fz-25 fz-18-sp fz-en-m">Wordpress / CMS</h3>
+            <h3 class="pb30 fz-25 fz-en-m">Wordpress / CMS</h3>
             <p class="fz-jp">
               ワードプレスなどCMS（コンテンツマネジメントシステム）をウェブサイトに導入する対応ができます。CMSを使うことで、ITエンジニアでなくても管理画面から簡単にウェブサイトの更新ができるようになります。自由度の高いカスタマイズができる技術があるので、運用しやすいサイトの構築が可能です。
             </p>
@@ -181,7 +181,7 @@
         <div class="service_details slide-up">
           <img src="./assets/img/sns.png" alt="エス・エン・エスの画像" />
           <div>
-            <h3 class="pb30 fz-25 fz-18-sp fz-en-m">SNS / Marketing</h3>
+            <h3 class="pb30 fz-25 fz-en-m">SNS / Marketing</h3>
             <p class="fz-jp">
               Facebook、Instagram、Twitter、You
               TubeなどSNSに埋め込みしたり、ウェブサイトと連動させたSNSの運用を代行したりすることでより商品・サービスへのリーチが増やす対応が可能です。SNSの広告運用やアクセス解析、投稿用の画像加工や動画編集など多岐にわたるサポートが可能です。
@@ -195,9 +195,9 @@
   <!-- work section -->
   <section class="work" id="works">
     <div class="container">
-      <h2 class="work-ttl fz-30 fz-25-sp fz-en-m">
+      <h2 class="work-ttl fz-36 fz-30-sp fz-en-m">
         Works
-        <span class="fz-18 fz-15-sp fz-jp-b">制作事例</span>
+        <span class="fz-20 fz-15-sp fz-jp">制作事例</span>
       </h2>
       <div class="work-list">
         <ul>
@@ -211,10 +211,10 @@
               </a>
 
             </div>
-            <div class="work-list-ttl fz-jp fz-16 fz-14-sp">
+            <div class="work-list-ttl fz-jp fz-18 fz-16-sp">
               <h3>ミャンマーなび</h3>
             </div>
-            <div class="work-list-txt fz-jp-b">
+            <div class="work-list-txt fz-jp">
               <p>
                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
               </p>
@@ -231,10 +231,10 @@
                 </div>
               </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-16 fz-14-sp">
+            <div class="work-list-ttl fz-jp fz-18 fz-16-sp">
               <h3>東京鶴丸会様</h3>
             </div>
-            <div class="work-list-txt fz-jp-b">
+            <div class="work-list-txt fz-jp">
               <p>
                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
               </p>
@@ -251,10 +251,10 @@
                 </div>
               </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-16 fz-14-sp">
+            <div class="work-list-ttl fz-jp fz-18 fz-16-sp">
               <h3>株式会社テレス様</h3>
             </div>
-            <div class="work-list-txt fz-jp-b">
+            <div class="work-list-txt fz-jp">
               <p>
                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
               </p>
@@ -271,10 +271,10 @@
                 </div>
               </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-16 fz-14-sp">
+            <div class="work-list-ttl fz-jp fz-18 fz-16-sp">
               <h3>道福祉介護事業 協同組合様</h3>
             </div>
-            <div class="work-list-txt fz-jp-b">
+            <div class="work-list-txt fz-jp">
               <p>
                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
               </p>
@@ -291,10 +291,10 @@
                 </div>
               </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-16 fz-14-sp">
+            <div class="work-list-ttl fz-jp fz-18 fz-16-sp">
               <h3>町田産婦人科 菜の花クリニック様</h3>
             </div>
-            <div class="work-list-txt fz-jp-b">
+            <div class="work-list-txt fz-jp">
               <p>
                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
               </p>
@@ -311,10 +311,10 @@
                 </div>
               </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-16 fz-14-sp">
+            <div class="work-list-ttl fz-jp fz-18 fz-16-sp">
               <h3>QA TEST LAB</h3>
             </div>
-            <div class="work-list-txt fz-jp-b">
+            <div class="work-list-txt fz-jp">
               <p>
                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
               </p>
@@ -331,10 +331,10 @@
                 </div>
               </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-16 fz-14-sp">
+            <div class="work-list-ttl fz-jp fz-18 fz-16-sp">
               <h3>やすだ勝平様</h3>
             </div>
-            <div class="work-list-txt fz-jp-b">
+            <div class="work-list-txt fz-jp">
               <p>
                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
               </p>
@@ -351,10 +351,10 @@
                 </div>
               </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-16 fz-14-sp">
+            <div class="work-list-ttl fz-jp fz-18 fz-16-sp">
               <h3>株式会社ハーティーケアー様</h3>
             </div>
-            <div class="work-list-txt fz-jp-b">
+            <div class="work-list-txt fz-jp">
               <p>
                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
               </p>
@@ -371,7 +371,7 @@
                 </div>
               </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-16 fz-14-sp">
+            <div class="work-list-ttl fz-jp fz-18 fz-16-sp">
               <h3>沼崎病院様</h3>
             </div>
 
@@ -393,7 +393,7 @@
                 </div>
               </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-16 fz-14-sp">
+            <div class="work-list-ttl fz-jp fz-18 fz-16-sp">
               <h3 class="fz-jp">九州大学経済学部 東京同窓会様</h3>
             </div>
 
@@ -418,7 +418,7 @@
 
 
             </div>
-            <div class="work-list-ttl fz-jp fz-16 fz-14-sp">
+            <div class="work-list-ttl fz-jp fz-18 fz-16-sp">
               <h3>九州大学東京同窓会 サマーフェスタ</h3>
             </div>
 
@@ -440,10 +440,10 @@
               </div>
              </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-16 fz-14-sp">
+            <div class="work-list-ttl fz-jp fz-18 fz-16-sp">
               <h3>JTC日本語学校</h3>
             </div>
-            <div class="work-list-txt fz-jp-b">
+            <div class="work-list-txt fz-jp">
               <p>
                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
               </p>
@@ -460,10 +460,10 @@
                 </div>
               </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-16 fz-14-sp">
+            <div class="work-list-ttl fz-jp fz-18 fz-16-sp">
               <h3>Sone Twet Thi</h3>
             </div>
-            <div class="work-list-txt fz-jp-b">
+            <div class="work-list-txt fz-jp">
               <p>
                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
               </p>
@@ -479,10 +479,10 @@
                 </div>
               </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-16 fz-14-sp">
+            <div class="work-list-ttl fz-jp fz-18 fz-16-sp">
               <h3>青汁ナチュラル</h3>
             </div>
-            <div class="work-list-txt fz-jp-b">
+            <div class="work-list-txt fz-jp">
               <p>
                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
               </p>
@@ -499,10 +499,10 @@
               </div>
               </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-16 fz-14-sp">
+            <div class="work-list-ttl fz-jp fz-18 fz-16-sp">
               <h3>青汁フルーティ</h3>
             </div>
-            <div class="work-list-txt fz-jp-b">
+            <div class="work-list-txt fz-jp">
               <p>
                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
               </p>
