--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
   <!-- about section -->
   <section class="about fz-en-m" id="about">
-    <div class="container fz-jp">
+    <div class="sub-container fz-jp">
       <h2 class="about-ttl fz-36 fz-30-sp fz-en-m">
         About
         <span class="fz-20 fz-15-sp fz-jp">事業概要</span>
@@ -127,13 +127,13 @@
 
   <!-- Service Section -->
   <section id="service">
-    <div class="container service-container">
-      <div class="mt60 service-container">
+    <div class="sub-container">
+      <div class="mt60">
         <h2 class="fz-36 fz-30-sp fz-en-m mb20">Service</h2>
         <span class="fz-20 fz-15-sp fz-jp">サービス</span>
       </div>
 
-      <div class="mt95 service-container">
+      <div class="mt95">
         <div class="service_details slide-up">
           <img src="./assets/img/seo.png" alt="ターゲットの画像" />
           <div>
@@ -144,7 +144,7 @@
           </div>
         </div>
       </div>
-      <div class="mt95 service-container">
+      <div class="mt95">
         <div class="service_details slide-up">
           <img src="./assets/img/design.png" alt="ディザイーの画像" />
           <div>
@@ -155,7 +155,7 @@
           </div>
         </div>
       </div>
-      <div class="mt95 service-container">
+      <div class="mt95">
         <div class="service_details slide-up">
           <img src="./assets/img/coding.png" alt="コーディングの画像" />
           <div>
@@ -166,7 +166,7 @@
           </div>
         </div>
       </div>
-      <div class="mt95 service-container">
+      <div class="mt95">
         <div class="service_details slide-up">
           <img src="./assets/img/wordpress.png" alt="ワードプレスの画像" />
           <div>
@@ -177,7 +177,7 @@
           </div>
         </div>
       </div>
-      <div class="mt95 service-container">
+      <div class="mt95">
         <div class="service_details slide-up">
           <img src="./assets/img/sns.png" alt="エス・エン・エスの画像" />
           <div>
@@ -194,7 +194,7 @@
 
   <!-- work section -->
   <section class="work" id="works">
-    <div class="container">
+    <div class="sub-container">
       <h2 class="work-ttl fz-36 fz-30-sp fz-en-m">
         Works
         <span class="fz-20 fz-15-sp fz-jp">制作事例</span>
