--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
             <div class="about-img">
               <img src="./assets/img/speed.png" alt="速いの画像" />
             </div>
-            <div class="about-list-ttl">
-              <h3 class="fz-jp fz-20">
+            <div class="about-list-ttl fz-jp fz-20">
+              <h3>
                 SPEED
-                <span class="fz-18 fz-16-sp fz-jp">速い</span>
+                <span class="fz-16 fz-jp">速い</span>
               </h3>
             </div>
-            <div class="about-list-txt fz-18 fz-16-sp fz-jp">
+            <div class="about-list-txt fz-16 fz-jp">
               <p>
                 実装スピードの速さに自信があります。どうしてスピードが速いかというと、在籍ITエンジニア数が多いためです。人海戦術でアサインを割り振り、ウェブサイトの新規構築やリニューアルはもちろん、テキスト修正や画像の差し替えなど細かな対応もすぐに対応が可能です。
               </p>
@@ -93,10 +93,10 @@
             <div class="about-list-ttl fz-jp fz-20">
               <h3>
                 FLEXIBLE
-                <span class="fz-18 fz-16-sp fz-jp">柔軟性</span>
+                <span class="fz-16 fz-jp">柔軟性</span>
               </h3>
             </div>
-            <div class="about-list-txt fz-18 fz-16-sp fz-jp">
+            <div class="about-list-txt fz-16 fz-jp">
               <p>
                 1箇所だけのテキスト修正やちょっとした画像の修正など細かな対応でもお受けしております。弊社が作成したサイトでなくても構築されたコードを解析して修正対応が可能です。既存サイトの一部分だけ修正したい、ウェブサイトを作成した制作会社が連絡がつかなくなった、保守会社を切り替えたいなどのご要望にもお応えできます。
               </p>
@@ -110,10 +110,10 @@
             <div class="about-list-ttl fz-jp fz-20">
               <h3>
                 EXPERIENCE
-                <span class="fz-18 fz-16-sp fz-jp">対応実績</span>
+                <span class="fz-16 fz-jp">対応実績</span>
               </h3>
             </div>
-            <div class="about-list-txt fz-18 fz-16-sp fz-jp">
+            <div class="about-list-txt fz-16 fz-jp">
               <p>
                 2016年から6年以上、ウェブ制作会社やデザイン会社の下請けとして数多の日本企業、サービスのサイトを構築してきました。契約上、実績公開できない物が多くありますが、行政、大学、大手自動車メーカー製品サイト、大手電機メーカー製品サイトなどいわゆる大手のウェブサイトも対応しているため技術力には自信があります。
               </p>
@@ -211,7 +211,7 @@
               </a>
 
             </div>
-            <div class="work-list-ttl fz-jp fz-18 fz-16-sp">
+            <div class="work-list-ttl fz-jp fz-16">
               <h3>ミャンマーなび</h3>
             </div>
             <div class="work-list-txt fz-jp">
@@ -231,7 +231,7 @@
                 </div>
               </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-18 fz-16-sp">
+            <div class="work-list-ttl fz-jp fz-16">
               <h3>東京鶴丸会様</h3>
             </div>
             <div class="work-list-txt fz-jp">
@@ -251,7 +251,7 @@
                 </div>
               </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-18 fz-16-sp">
+            <div class="work-list-ttl fz-jp fz-16">
               <h3>株式会社テレス様</h3>
             </div>
             <div class="work-list-txt fz-jp">
@@ -271,7 +271,7 @@
                 </div>
               </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-18 fz-16-sp">
+            <div class="work-list-ttl fz-jp fz-16">
               <h3>道福祉介護事業 協同組合様</h3>
             </div>
             <div class="work-list-txt fz-jp">
@@ -291,7 +291,7 @@
                 </div>
               </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-18 fz-16-sp">
+            <div class="work-list-ttl fz-jp fz-16">
               <h3>町田産婦人科 菜の花クリニック様</h3>
             </div>
             <div class="work-list-txt fz-jp">
@@ -311,7 +311,7 @@
                 </div>
               </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-18 fz-16-sp">
+            <div class="work-list-ttl fz-jp fz-16">
               <h3>QA TEST LAB</h3>
             </div>
             <div class="work-list-txt fz-jp">
@@ -331,7 +331,7 @@
                 </div>
               </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-18 fz-16-sp">
+            <div class="work-list-ttl fz-jp fz-16">
               <h3>やすだ勝平様</h3>
             </div>
             <div class="work-list-txt fz-jp">
@@ -351,7 +351,7 @@
                 </div>
               </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-18 fz-16-sp">
+            <div class="work-list-ttl fz-jp fz-16">
               <h3>株式会社ハーティーケアー様</h3>
             </div>
             <div class="work-list-txt fz-jp">
@@ -371,7 +371,7 @@
                 </div>
               </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-18 fz-16-sp">
+            <div class="work-list-ttl fz-jp fz-16">
               <h3>沼崎病院様</h3>
             </div>
 
@@ -393,7 +393,7 @@
                 </div>
               </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-18 fz-16-sp">
+            <div class="work-list-ttl fz-jp fz-16">
               <h3 class="fz-jp">九州大学経済学部 東京同窓会様</h3>
             </div>
 
@@ -418,7 +418,7 @@
 
 
             </div>
-            <div class="work-list-ttl fz-jp fz-18 fz-16-sp">
+            <div class="work-list-ttl fz-jp fz-16">
               <h3>九州大学東京同窓会 サマーフェスタ</h3>
             </div>
 
@@ -440,7 +440,7 @@
               </div>
              </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-18 fz-16-sp">
+            <div class="work-list-ttl fz-jp fz-16">
               <h3>JTC日本語学校</h3>
             </div>
             <div class="work-list-txt fz-jp">
@@ -460,7 +460,7 @@
                 </div>
               </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-18 fz-16-sp">
+            <div class="work-list-ttl fz-jp fz-16">
               <h3>Sone Twet Thi</h3>
             </div>
             <div class="work-list-txt fz-jp">
@@ -479,7 +479,7 @@
                 </div>
               </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-18 fz-16-sp">
+            <div class="work-list-ttl fz-jp fz-16">
               <h3>青汁ナチュラル</h3>
             </div>
             <div class="work-list-txt fz-jp">
@@ -499,7 +499,7 @@
               </div>
               </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-18 fz-16-sp">
+            <div class="work-list-ttl fz-jp fz-16">
               <h3>青汁フルーティ</h3>
             </div>
             <div class="work-list-txt fz-jp">
