--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="assets/css/import.css" />
   <link rel="stylesheet" href="assets/css/slick.css" />
   <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="assets/css/animation.css" />
 </head>
 
 <body id="top">
@@ -69,51 +70,51 @@
       </h2>
       <div class="about-list">
         <ul class="">
-          <li class="slide-up">
+          <li class="fadeUpTrigger">
             <div class="about-img">
               <img src="./assets/img/speed.png" alt="速いの画像" />
             </div>
-            <div class="about-list-ttl fz-jp fz-20">
+            <div class="about-list-ttl fz-jp fz-20 fadeUpTrigger">
               <h3>
                 SPEED
                 <span class="fz-16 fz-jp">速い</span>
               </h3>
             </div>
-            <div class="about-list-txt fz-16 fz-jp">
+            <div class="about-list-txt fz-16 fz-jp fadeUpTrigger">
               <p>
                 実装スピードの速さに自信があります。どうしてスピードが速いかというと、在籍ITエンジニア数が多いためです。人海戦術でアサインを割り振り、ウェブサイトの新規構築やリニューアルはもちろん、テキスト修正や画像の差し替えなど細かな対応もすぐに対応が可能です。
               </p>
             </div>
           </li>
 
-          <li class="slide-up">
+          <li class="fadeUpTrigger">
             <div class="about-img">
               <img src="./assets/img/flexible.png" alt="柔軟性の画像" />
             </div>
-            <div class="about-list-ttl fz-jp fz-20">
+            <div class="about-list-ttl fz-jp fz-20 fadeUpTrigger">
               <h3>
                 FLEXIBLE
                 <span class="fz-16 fz-jp">柔軟性</span>
               </h3>
             </div>
-            <div class="about-list-txt fz-16 fz-jp">
+            <div class="about-list-txt fz-16 fz-jp fadeUpTrigger">
               <p>
                 1箇所だけのテキスト修正やちょっとした画像の修正など細かな対応でもお受けしております。弊社が作成したサイトでなくても構築されたコードを解析して修正対応が可能です。既存サイトの一部分だけ修正したい、ウェブサイトを作成した制作会社が連絡がつかなくなった、保守会社を切り替えたいなどのご要望にもお応えできます。
               </p>
             </div>
           </li>
 
-          <li class="slide-up">
+          <li class="fadeUpTrigger">
             <div class="about-img">
               <img src="./assets/img/experience.png" alt="対応実績の画像" />
             </div>
-            <div class="about-list-ttl fz-jp fz-20">
+            <div class="about-list-ttl fz-jp fz-20 fadeUpTrigger">
               <h3>
                 EXPERIENCE
                 <span class="fz-16 fz-jp">対応実績</span>
               </h3>
             </div>
-            <div class="about-list-txt fz-16 fz-jp">
+            <div class="about-list-txt fz-16 fz-jp fadeUpTrigger">
               <p>
                 2016年から6年以上、ウェブ制作会社やデザイン会社の下請けとして数多の日本企業、サービスのサイトを構築してきました。契約上、実績公開できない物が多くありますが、行政、大学、大手自動車メーカー製品サイト、大手電機メーカー製品サイトなどいわゆる大手のウェブサイトも対応しているため技術力には自信があります。
               </p>
@@ -134,7 +135,7 @@
       </div>
 
       <div class="mt95">
-        <div class="service_details slide-up">
+        <div class="service_details fadeUpTrigger">
           <img src="./assets/img/seo.png" alt="ターゲットの画像" />
           <div>
             <h3 class="pb30 fz-25 fz-en-m">SEO / Marketing</h3>
@@ -145,7 +146,7 @@
         </div>
       </div>
       <div class="mt95">
-        <div class="service_details slide-up">
+        <div class="service_details fadeUpTrigger">
           <img src="./assets/img/design.png" alt="ディザイーの画像" />
           <div>
             <h3 class="pb30 fz-25 fz-en-m">Design</h3>
@@ -156,7 +157,7 @@
         </div>
       </div>
       <div class="mt95">
-        <div class="service_details slide-up">
+        <div class="service_details fadeUpTrigger">
           <img src="./assets/img/coding.png" alt="コーディングの画像" />
           <div>
             <h3 class="pb30 fz-25 fz-en-m">Coding / Programming</h3>
@@ -167,7 +168,7 @@
         </div>
       </div>
       <div class="mt95">
-        <div class="service_details slide-up">
+        <div class="service_details fadeUpTrigger">
           <img src="./assets/img/wordpress.png" alt="ワードプレスの画像" />
           <div>
             <h3 class="pb30 fz-25 fz-en-m">Wordpress / CMS</h3>
@@ -178,7 +179,7 @@
         </div>
       </div>
       <div class="mt95">
-        <div class="service_details slide-up">
+        <div class="service_details fadeUpTrigger">
           <img src="./assets/img/sns.png" alt="エス・エン・エスの画像" />
           <div>
             <h3 class="pb30 fz-25 fz-en-m">SNS / Marketing</h3>
@@ -201,7 +202,7 @@
       </h2>
       <div class="work-list">
         <ul>
-          <li class="slide-up">
+          <li class="fadeUpTrigger">
             <div class="work-list-img">
               <a href="https://myannavi.com/" target="_blank"  > <img src="./assets/img/myan-navi.png" alt="ミャンマーなびの画像" />
                 <div class="overlay">
@@ -211,10 +212,10 @@
               </a>
 
             </div>
-            <div class="work-list-ttl fz-jp fz-16">
+            <div class="work-list-ttl fadeUpTrigger fz-jp fz-16">
               <h3>ミャンマーなび</h3>
             </div>
-            <div class="work-list-txt fz-jp">
+            <div class="work-list-txt fadeUpTrigger fz-jp">
               <p>
                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
               </p>
@@ -222,7 +223,7 @@
           </li>
 
 
-          <li class="slide-up">
+          <li class="fadeUpTrigger">
             <div class="work-list-img">
               <a href="https://tsurumaru.net/" target="_blank"> <img src="./assets/img/other.png" alt="東京鶴丸会様の画像" />
                 <div class="overlay">
@@ -231,10 +232,10 @@
                 </div>
               </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-16">
+            <div class="work-list-ttl fadeUpTrigger fz-jp fz-16">
               <h3>東京鶴丸会様</h3>
             </div>
-            <div class="work-list-txt fz-jp">
+            <div class="work-list-txt fadeUpTrigger fz-jp">
               <p>
                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
               </p>
@@ -242,7 +243,7 @@
           </li>
 
 
-          <li class="slide-up">
+          <li class="fadeUpTrigger">
             <div class="work-list-img">
               <a href="http://teles.jp/" target="_blank"><img src="./assets/img/teles.png" alt="株式会社テレス様の画像" />
                 <div class="overlay">
@@ -251,10 +252,10 @@
                 </div>
               </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-16">
+            <div class="work-list-ttl fadeUpTrigger fz-jp fz-16">
               <h3>株式会社テレス様</h3>
             </div>
-            <div class="work-list-txt fz-jp">
+            <div class="work-list-txt fadeUpTrigger fz-jp">
               <p>
                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
               </p>
@@ -262,7 +263,7 @@
           </li>
 
 
-          <li class="slide-up">
+          <li class="fadeUpTrigger">
             <div class="work-list-img">
               <a href="https://hok-fukushikaigo.jp/" target="_blank"><img src="./assets/img/nursing.png" alt="看護の画像" />
                 <div class="overlay">
@@ -271,10 +272,10 @@
                 </div>
               </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-16">
+            <div class="work-list-ttl fadeUpTrigger fz-jp fz-16">
               <h3>道福祉介護事業 協同組合様</h3>
             </div>
-            <div class="work-list-txt fz-jp">
+            <div class="work-list-txt fadeUpTrigger fz-jp">
               <p>
                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
               </p>
@@ -282,7 +283,7 @@
           </li>
 
 
-          <li class="slide-up">
+          <li class="fadeUpTrigger">
             <div class="work-list-img">
               <a href="https://m-nanohana.jp/" target="_blank"><img src="./assets/img/clinic.png" alt="診療所の画像" />
                 <div class="overlay">
@@ -291,10 +292,10 @@
                 </div>
               </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-16">
+            <div class="work-list-ttl fadeUpTrigger fz-jp fz-16">
               <h3>町田産婦人科 菜の花クリニック様</h3>
             </div>
-            <div class="work-list-txt fz-jp">
+            <div class="work-list-txt fadeUpTrigger fz-jp">
               <p>
                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
               </p>
@@ -302,7 +303,7 @@
           </li>
 
 
-          <li class="slide-up">
+          <li class="fadeUpTrigger">
             <div class="work-list-img">
               <a href="https://qualy.co.jp/qa/lab/" target="_blank"><img src="./assets/img/QAtest.png" alt="キュー・アー・テストの画像" />
                 <div class="overlay">
@@ -311,10 +312,10 @@
                 </div>
               </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-16">
+            <div class="work-list-ttl fadeUpTrigger fz-jp fz-16">
               <h3>QA TEST LAB</h3>
             </div>
-            <div class="work-list-txt fz-jp">
+            <div class="work-list-txt fadeUpTrigger fz-jp">
               <p>
                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
               </p>
@@ -322,7 +323,7 @@
           </li>
 
 
-          <li class="slide-up">
+          <li class="fadeUpTrigger">
             <div class="work-list-img">
               <a href="https://yasudashohei.net/" target="_blank"><img src="./assets/img/yamada.png" alt="やすだ勝平様の画像" />
                 <div class="overlay">
@@ -331,10 +332,10 @@
                 </div>
               </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-16">
+            <div class="work-list-ttl fadeUpTrigger fz-jp fz-16">
               <h3>やすだ勝平様</h3>
             </div>
-            <div class="work-list-txt fz-jp">
+            <div class="work-list-txt fadeUpTrigger fz-jp">
               <p>
                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
               </p>
@@ -342,7 +343,7 @@
           </li>
 
 
-          <li class="slide-up">
+          <li class="fadeUpTrigger">
             <div class="work-list-img">
               <a href="https://heartycare.co.jp/" target="_blank"><img src="./assets/img/hearty-care.png" alt="ハーティーケアー様の画像" />
                 <div class="overlay">
@@ -351,17 +352,17 @@
                 </div>
               </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-16">
+            <div class="work-list-ttl fadeUpTrigger fz-jp fz-16">
               <h3>株式会社ハーティーケアー様</h3>
             </div>
-            <div class="work-list-txt fz-jp">
+            <div class="work-list-txt fadeUpTrigger fz-jp">
               <p>
                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
               </p>
             </div>
           </li>
 
-          <li class="slide-up">
+          <li class="fadeUpTrigger">
             <div class="work-list-img">
               <a href="https://shinyukai-r.or.jp/" target="_blank"><img src="./assets/img/houjin.png" alt="医療法人社団 心優会" />
                 <div class="overlay">
@@ -370,11 +371,11 @@
                 </div>
               </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-16 fz-14-sp">
+            <div class="work-list-ttl fadeUpTrigger fz-jp fz-16 fz-14-sp">
               <h3>医療法人社団 心優会様</h3>
             </div>
 
-            <div class="work-list-txt fz-jp">
+            <div class="work-list-txt fadeUpTrigger fz-jp">
               <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス</p>
 
 
@@ -382,7 +383,7 @@
             </div>
           </li>
 
-          <li class="slide-up">
+          <li class="fadeUpTrigger">
             <div class="work-list-img">
               <a href="http://shinyukai-r.or.jp/numazaki/" target="_blank"><img src="./assets/img/namazaki.png" alt="沼崎の画像" />
                 <div class="overlay">
@@ -391,11 +392,11 @@
                 </div>
               </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-16">
+            <div class="work-list-ttl fadeUpTrigger fz-jp fz-16">
               <h3>沼崎病院様</h3>
             </div>
 
-            <div class="work-list-txt fz-jp">
+            <div class="work-list-txt fadeUpTrigger fz-jp">
               <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス</p>
 
 
@@ -404,7 +405,7 @@
           </li>
 
 
-          <li class="slide-up">
+          <li class="fadeUpTrigger">
             <div class="work-list-img">
               <a href="https://kyukei-obog.tokyo/" target=""><img src="./assets/img/kyushu-university.png" alt="九州大学の画像" />
                 <div class="overlay">
@@ -413,11 +414,11 @@
                 </div>
               </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-16">
+            <div class="work-list-ttl fadeUpTrigger fz-jp fz-16">
               <h3 class="fz-jp">九州大学経済学部 東京同窓会様</h3>
             </div>
 
-            <div class="work-list-txt fz-jp">
+            <div class="work-list-txt fadeUpTrigger fz-jp">
               <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス</p>
 
 
@@ -425,7 +426,7 @@
           </li>
 
 
-          <li class="slide-up">
+          <li class="fadeUpTrigger">
             <div class="work-list-img">
 
               <a href="https://summerfesta.work/2022/" target="_blank"><img src="./assets/img/tokyo-alumni.png" alt="九州大学東京同窓会の画像" />
@@ -438,19 +439,19 @@
 
 
             </div>
-            <div class="work-list-ttl fz-jp fz-16">
+            <div class="work-list-ttl fadeUpTrigger fz-jp fz-16">
               <h3>九州大学東京同窓会 サマーフェスタ</h3>
             </div>
 
-            <div class="work-list-txt fz-jp">
+            <div class="work-list-txt fadeUpTrigger fz-jp">
               <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス</p>
 
 
             </div>
-          </li class="slide-up">
+          </li class="fadeUpTrigger">
 
 
-          <li class="slide-up">
+          <li class="fadeUpTrigger">
             <div class="work-list-img">
              <a href="http://jtc.qualymm.com/" target="_blank">
               <img src="./assets/img/jtc-language-center.png" alt="日本語学校の画像" />
@@ -460,10 +461,10 @@
               </div>
              </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-16">
+            <div class="work-list-ttl fadeUpTrigger fz-jp fz-16">
               <h3>JTC日本語学校</h3>
             </div>
-            <div class="work-list-txt fz-jp">
+            <div class="work-list-txt fadeUpTrigger fz-jp">
               <p>
                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
               </p>
@@ -471,7 +472,7 @@
           </li>
 
 
-          <li class="slide-up">
+          <li class="fadeUpTrigger">
             <div class="work-list-img">
               <a href="https://sonetwetthi.com/" target="_blank"><img src="./assets/img/sonetwethi.png" alt="ソネトゥティの画像" />
                 <div class="overlay">
@@ -480,17 +481,17 @@
                 </div>
               </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-16">
+            <div class="work-list-ttl fadeUpTrigger fz-jp fz-16">
               <h3>Sone Twet Thi</h3>
             </div>
-            <div class="work-list-txt fz-jp">
+            <div class="work-list-txt fadeUpTrigger fz-jp">
               <p>
                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
               </p>
             </div>
           </li>
 
-          <li class="slide-up">
+          <li class="fadeUpTrigger">
             <div class="work-list-img">
               <a href="https://chouju.jp/lp/aojiru/natural/" target="_blank"><img src="./assets/img/green-juice1.png" alt="青汁ナチュラルの画像" />
                 <div class="overlay">
@@ -499,17 +500,17 @@
                 </div>
               </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-16">
+            <div class="work-list-ttl fadeUpTrigger fz-jp fz-16">
               <h3>青汁ナチュラル</h3>
             </div>
-            <div class="work-list-txt fz-jp">
+            <div class="work-list-txt fadeUpTrigger fz-jp">
               <p>
                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
               </p>
             </div>
           </li>
 
-          <li class="slide-up">
+          <li class="fadeUpTrigger">
             <div class="work-list-img">
               <a href="https://chouju.jp/lp/aojiru/fruity/" target="_blank">
                 <img src="./assets/img/green-juice-fruity.png" alt="青汁フルーティの画像" />
@@ -519,17 +520,17 @@
               </div>
               </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-16">
+            <div class="work-list-ttl fadeUpTrigger fz-jp fz-16">
               <h3>青汁フルーティ</h3>
             </div>
-            <div class="work-list-txt fz-jp">
+            <div class="work-list-txt fadeUpTrigger fz-jp">
               <p>
                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
               </p>
             </div>
           </li>
 
-          <li class="slide-up">
+          <li class="fadeUpTrigger">
             <div class="work-list-img">
              <a href="http://qualy.jp/yurikago.or.jp/" target="_blank">
               <img src="./assets/img/yurikago.png" alt="医療法人ゆりかご様" />
@@ -539,17 +540,17 @@
               </div>
              </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-16 fz-14-sp">
+            <div class="work-list-ttl fadeUpTrigger fz-jp fz-16 fz-14-sp">
               <h3>医療法人ゆりかご様</h3>
             </div>
-            <div class="work-list-txt fz-jp-b">
+            <div class="work-list-txt fadeUpTrigger fz-jp-b">
               <p>
                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
               </p>
             </div>
           </li>
 
-          <li class="slide-up">
+          <li class="fadeUpTrigger">
             <div class="work-list-img">
              <a href="https://yurikago.or.jp/biyou-gairai/" target="_blank">
               <img src="./assets/img/byougai.png" alt="駒ヶ根高原レディスクリニック様 美容外来 " />
@@ -559,17 +560,17 @@
               </div>
              </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-16 fz-14-sp">
+            <div class="work-list-ttl fadeUpTrigger fz-jp fz-16 fz-14-sp">
               <h3>駒ヶ根高原レディスクリニック様 美容外来</h3>
             </div>
-            <div class="work-list-txt fz-jp-b">
+            <div class="work-list-txt fadeUpTrigger fz-jp-b">
               <p>
                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
               </p>
             </div>
           </li>
 
-          <li class="slide-up"> 
+          <li class="fadeUpTrigger"> 
             <div class="work-list-img">
              <a href="http://qualy.jp/kklc.jp/" target="_blank">
               <img src="./assets/img/kklc.png" alt="駒ヶ根高原レディスクリニック様 " />
@@ -579,10 +580,10 @@
               </div>
              </a>
             </div>
-            <div class="work-list-ttl fz-jp fz-16 fz-14-sp">
+            <div class="work-list-ttl fadeUpTrigger fz-jp fz-16 fz-14-sp">
               <h3>駒ヶ根高原レディスクリニック様</h3>
             </div>
-            <div class="work-list-txt fz-jp-b">
+            <div class="work-list-txt fadeUpTrigger fz-jp-b">
               <p>
                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキス
               </p>
@@ -618,6 +619,7 @@
   <script src="https://unpkg.com/scrollreveal"></script>
   <script src="./assets/js/slick.min.js"></script>
   <script src="./assets/js/script.js"></script>
+  <script src="./assets/js/animation.js"></script>
 </body>
 
 </html>
