--- a/index.html
+++ b/index.html
@@ -615,10 +615,10 @@
       <div class="footer fz-en-m">
         <div class="footer-nav">
           <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#service">Service</a></li>
-            <li><a href="#works">Works</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#about"><span>About</span></a></li>
+            <li><a href="#service"><span>Service</span></a></li>
+            <li><a href="#works"><span>Works</span></a></li>
+            <li><a href="#contact"><span>Contact</span></a></li>
           </ul>
         </div>
         <div class="copyright">&copy; Qualy, Inc. All rights reserved.</div>
